[package]
name = "kis_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# 비동기 런타임
tokio = { version = "1", features = ["full"] }

# 직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 날짜/시간
chrono = { version = "0.4", features = ["serde"] }

# 에러 처리
thiserror = "2"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# 환경변수
dotenvy = "0.15"

# 비동기 트레이트
async-trait = "0.1"

# HTTP 클라이언트
reqwest = { version = "0.12", features = ["json"] }

# 속도 제한
governor = "0.8"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# 웹 프레임워크
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 캐시
dashmap = "6"

# 데이터베이스
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono"] }

# UUID
uuid = { version = "1", features = ["v4"] }
